<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".View.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_user2"/>

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_username" />
            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/rol_array"
                android:prompt="@string/hint_rol" />

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@color/colorButton"
            android:layout_marginBottom="10dp"
            android:id="@+id/btnLogin"
            android:onClick="login"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>

